# zed-dependi

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  run-benchmarks.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  codspeed.yml  contributor-experience.yml  coverage.yml  fuzz.yml  pages.yml  profile.yml  release.yml
coverage/: tarpaulin-report.html  tarpaulin-report.json
dependi-lsp/: .clippy.toml  Cargo.toml
dependi-lsp/benches/: benchmarks.rs
dependi-lsp/fuzz/: .gitignore  Cargo.toml
dependi-lsp/fuzz/corpus/fuzz_cargo/: complex.toml  edge_cases.toml  simple.toml
dependi-lsp/fuzz/corpus/fuzz_csharp/: project.csproj
dependi-lsp/fuzz/corpus/fuzz_dart/: pubspec.yaml
dependi-lsp/fuzz/corpus/fuzz_go/: go.mod
dependi-lsp/fuzz/corpus/fuzz_npm/: complex.json  edge_cases.json  simple.json
dependi-lsp/fuzz/corpus/fuzz_php/: composer.json
dependi-lsp/fuzz/corpus/fuzz_python/: edge_cases.txt  hatch.toml  hatch_pyproject_basic.toml  hatch_pyproject_combined.toml  hatch_pyproject_extra.toml  mixed-format-edge-case.toml  pyproject_dependency_groups.toml  pyproject_pep621.toml  pyproject_poetry.toml  requirements.txt
dependi-lsp/fuzz/corpus/fuzz_ruby/: Gemfile
dependi-lsp/fuzz/fuzz_targets/: fuzz_cargo.rs  fuzz_csharp.rs  fuzz_dart.rs  fuzz_go.rs  fuzz_npm.rs  fuzz_php.rs  fuzz_python.rs  fuzz_ruby.rs
dependi-lsp/src/: backend.rs  config.rs  document.rs  file_types.rs  lib.rs  main.rs  reports.rs  settings_edit.rs  utils.rs
dependi-lsp/src/auth/: cargo_credentials.rs  mod.rs  npmrc.rs
dependi-lsp/src/cache/: CLAUDE.md  mod.rs  sqlite.rs  sqlite_manager.rs
dependi-lsp/src/cache/advisory/: memory.rs  mod.rs  sqlite.rs
dependi-lsp/src/docs/: mod.rs  swift_tutorial_fixture.rs
dependi-lsp/src/parsers/: cargo.rs  cargo_lock.rs  composer_lock.rs  csharp.rs  dart.rs  gemfile_lock.rs  go.rs  go_sum.rs  json_spans.rs  lockfile_graph.rs  lockfile_resolver.rs  maven.rs  mod.rs  npm.rs  npm_lock.rs  packages_lock_json.rs  php.rs  pnpm_workspace.rs  pubspec_lock.rs  python.rs  python_lock.rs  ruby.rs
dependi-lsp/src/providers/: code_actions.rs  completion.rs  diagnostics.rs  document_links.rs  inlay_hints.rs  mod.rs  version_edit.rs
dependi-lsp/src/registries/: cargo_sparse.rs  crates_io.rs  go_proxy.rs  http_client.rs  maven_central.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pub_dev.rs  pypi.rs  rubygems.rs  url_sanitizer.rs  version_utils.rs
dependi-lsp/src/vulnerabilities/: cache.rs  mod.rs  osv.rs  rustsec_client.rs
dependi-lsp/tests/: advisory_cache_wiring_test.rs  architecture_doc_test.rs  cargo_crash_regression.rs  code_actions_ignore_test.rs  fuzz_regression.rs  integration_test.rs  lockfile_resolver_integration.rs  pnpm_workspace_catalog_test.rs  scan_cli_test.rs  tokio_feature_set_test.rs  version_update_actions_test.rs
dependi-lsp/tests/fixtures/: tokio_feature_measurements.toml
dependi-lsp/tests/fixtures/npm-project-with-lockfile/: package-lock.json  package.json
dependi-lsp/tests/fixtures/python-project-with-lockfile/: pyproject.toml
dependi-lsp/tests/fixtures/rust-project-with-lockfile/: Cargo.toml
dependi-zed/: Cargo.toml  extension.toml  extension.wasm
dependi-zed/src/: lib.rs
docs/: Gemfile  _config.yml  adding-a-language.md  architecture.md  cli.md  configuration.md  contributing.md  index.md  installation.md  private-registries.md  profiling.md  registries.md  troubleshooting.md
docs/features/: code-actions.md  diagnostics.md  index.md  inlay-hints.md  security.md
docs/languages/: dart.md  dotnet.md  go.md  index.md  nodejs.md  php.md  python.md  ruby.md  rust.md
docs/plans/: 2026-04-27-lockfile-resolver-trait.md
docs/registries/: index.md  private.md
docs/specs/: 2026-04-27-lockfile-resolver-trait-design.md  2026-04-27-npm-php-json-spans-design.md
docs/specs/plans/: 2026-04-27-npm-php-json-spans.md
docs/superpowers/plans/: 2026-04-17-maven-pom-xml-support.md
docs/superpowers/specs/: 2026-04-17-maven-pom-xml-support-design.md
scripts/: check_mermaid_syntax.sh  coverage.sh  fuzz.sh  profile-full.sh  profile-parse.sh  profile-registry.sh
tests/fixtures/: cargo_50_deps.toml  package_100_deps.json
