[package]
name = "dependi-lsp"
version = "1.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Language server for dependency management in Zed"
authors = ["Mathieu"]

[lib]
name = "dependi_lsp"
path = "src/lib.rs"

[[bin]]
name = "dependi-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
dashmap = "6.1"
toml = "1.0.7"
semver = "1.0.27"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
rusqlite = { version = "0.39", features = ["bundled"] }
r2d2 = "0.8"
dirs = "6"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
taplo = "0.14"

[dev-dependencies]
serial_test = "3"
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
