[package]
name = "dependi-zed"
version = "1.8.1"
edition = "2024"
rust-version = "1.90"
license = "MIT"
description = "Zed extension for dependency management"
authors = ["Mathieu"]

[lib]
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.7"
sha2 = "0.11"
hex = "0.4"

[lints.clippy]
uninlined_format_args = "warn"
unnecessary_debug_formatting = "warn"
