[package]
name = "dependi-lsp-fuzz"
version = "0.0.0"
edition = "2024"
publish = false
license = "MIT"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.dependi-lsp]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "fuzz_cargo"
path = "fuzz_targets/fuzz_cargo.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_npm"
path = "fuzz_targets/fuzz_npm.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_python"
path = "fuzz_targets/fuzz_python.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_go"
path = "fuzz_targets/fuzz_go.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ruby"
path = "fuzz_targets/fuzz_ruby.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_php"
path = "fuzz_targets/fuzz_php.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_dart"
path = "fuzz_targets/fuzz_dart.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_csharp"
path = "fuzz_targets/fuzz_csharp.rs"
test = false
doc = false
bench = false
